plang/testing/logs/false-incorrect/16/program16.p.p
k qVN rp3 VgG.

wu7il (KUc) (TRv) :- (sY9 S0 (M); eYUg VUD (qqBw) (Mw2) (r (aH (Tr4hP) (tmh) (o) Jy6)), x (ly9z (xhx PGMn F) (g9R (yufd) (F1Yoi) (QcCqH) (ww3 (MXawD) (a hF (xdX)) (RA5h))) (F)), p (HPk5v) C cW (H); ((zp))); (r Y T uw97I).
q (BrY5W) (WSCoW).


r3J pCjK.
fp6C dXM (SxKOI).


ln :- zQrF lbb.
qwb vdYF (TRv) (PZ1Rn).
q (wMHbr (LZ) h dpK) rLmf.


jVx0 H :- ((e (KbMjd) O; eP66); (q Jz; q)); p IU7 b (wWFJ); uK YYec (r3 P A (g ZB)) xEwxQ (yon (SWUr) (gP) (DgVhH) (Ux7B)); b2B0 (Na68) dc JtB9; sqd5m (sP (s U cmpQa N) (ryJE) mqO5z) (D) Amyhl Y09, mlS, zX mdwr (hi) l6.
? (gu yKD Zr zpL rl); (pGIN (h4l0A Cb (MXvyX) Jm) HrVYk); pKW3c x0yZ (y4QL) (leIf (ph (stTyb (M0) h hbLV (J7)) (U) (IPZ)) (A)); (bt4 CkP3 (oTQ0 (Nj6C) (nYA (xJR7C) Q XqM) (FT)) w, sn Imc aP0); ja6U (p (f (cOk xfomw (ivqhR y6 q6)) (jM5X) nUivW (H6G)) Z) pZGh.
